--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ ktorVersion=1.6.5
 kotlinVersion=1.5.31
 logbackVersion=1.2.6
 exposedVersion=0.36.1
+hikariVersion=5.0.0
 kotlin.code.style=official
