--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ kotlinVersion=1.5.31
 logbackVersion=1.2.6
 exposedVersion=0.36.1
 hikariVersion=5.0.0
+koinVersion=3.1.3
 kotlin.code.style=official
