--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ logbackVersion=1.2.6
 exposedVersion=0.36.1
 hikariVersion=5.0.0
 koinVersion=3.1.3
+assertjVersion=3.21.0
 kotlin.code.style=official
