feat: update db username

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 ktorVersion=1.6.5
 kotlinVersion=1.5.31
 logbackVersion=1.2.6
+mysqlVersion=8.0.27
 exposedVersion=0.36.1
 hikariVersion=5.0.0
 koinVersion=3.1.3
