--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,8 @@ ktor {
     deployment {
         port = 12306
         port = ${?PORT}
+        autoreload = true
+        watch = [com.asia]
     }
     application {
         modules = [ com.asia.ApplicationKt.module ]
