test: add auto reload

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,9 @@
 ktor {
+    development = true
     deployment {
         port = 12306
         port = ${?PORT}
-        autoreload = true
-        watch = [com.asia]
+        watch = [ classes, resources ]
     }
     application {
         modules = [ com.asia.ApplicationKt.module ]
