--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlinVersion=1.5.31
 logbackVersion=1.2.7
 mysqlVersion=8.0.27
 exposedVersion=0.36.1
+flywayVersion=7.15.0
 hikariVersion=5.0.0
 koinVersion=3.1.3
 assertjVersion=3.21.0
