--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
-ktorVersion=1.6.5
+ktorVersion=1.6.6
 kotlinVersion=1.5.31
 logbackVersion=1.2.7
 mysqlVersion=8.0.27
 exposedVersion=0.36.1
 flywayVersion=7.15.0
 hikariVersion=5.0.0
-koinVersion=3.1.3
+koinVersion=3.1.4
 assertjVersion=3.21.0
+junitVersion=5.8.2
 kotlin.code.style=official
