--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,9 @@
 ktor {
-    development = true
+    ;development = true
     deployment {
         port = 12306
         port = ${?PORT}
-        watch = [ classes, resources ]
+        ;watch = [ classes, resources ]
     }
     application {
         modules = [ com.asia.ApplicationKt.module ]
